src/objects/Fund_Financials__c.object
<CustomObject>
    <description>Quarter by quarter financials of a particular fund.</description>
    <fields>
        <fullName>Canapi_ownership__c</fullName>
        <label>Canapi ownership</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DPI__c</fullName>
        <description>Distribution to Paid-In (DPI): measure of the cumulative investment returned to the investor relative to invested capital.</description>
        <inlineHelpText>Distribution to Paid-In (DPI): measure of the cumulative investment returned to the investor relative to invested capital.</inlineHelpText>
        <label>DPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Fund_Financials</relationshipLabel>
        <relationshipName>Fund_Financials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_IRR__c</fullName>
        <label>Gross IRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_TVPI__c</fullName>
        <label>Gross TVPI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ITD_Called_Percent__c</fullName>
        <label>ITD Called Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ITD_Called__c</fullName>
        <label>ITD Called</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_IRR__c</fullName>
        <label>Net IRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_TVPI__c</fullName>
        <description>Total value paid in</description>
        <label>Net TVPI</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QTR_Date_value__c</fullName>
        <description>The actual date you want to pick for the QTR</description>
        <label>QTR Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Fund Financials</label>
    <nameField>
        <displayFormat>FF-{00000}</displayFormat>
        <label>Fund Financials ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>